# server_iot

./: IoT_database.db  alembic.ini  hello.py  main.py  pyproject.toml  tailwind.config.js
alembic/: env.py
alembic/versions/: 2ce0504710f4_initial_migration.py
app/: database.py  models.py
app/routers/: aht10.py  camera.py  openweather.py  pzem.py
app/static/: index.html
app/static/css/: output.css
app/templates/: aht10.html  layout.html  navbar.html
