[project]
name = "server-iot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.14.1",
    "fastapi>=0.115.8",
    "fastapi-tailwind>=1.0.2b1",
    "jinja2>=3.1.5",
    "sqlalchemy>=2.0.37",
    "uvicorn>=0.34.0",
]
